Fix minor img stretch in Chrome

--- a/src/app/components/player/player.component.scss
+++ b/src/app/components/player/player.component.scss
@@ -31,6 +31,7 @@
 
 #album-cover {
   border-radius: 4px;
+  width: auto;
   margin: 0;
   padding: 0;
 }
